--- a/src/pages/detail/detail.wxss
+++ b/src/pages/detail/detail.wxss
@@ -8,7 +8,7 @@ page {
   padding: 10rpx 20rpx;
   line-height: 48rpx;
   font-size: 32rpx;
-  color: #ff6d1f;
+  color: #ff3264;
 }
 .detail__text {
   padding: 12rpx 20rpx;
@@ -33,7 +33,7 @@ page {
 .detail-ctrl__text {
   margin-left: 16rpx;
   font-size: 32rpx;
-  color: #ff6d1f;
+  color: #ff3264;
 }
 .detail-ctrl__text--mini {
   font-size: 24rpx;
